--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@fontsource/anton": "^5.0.19",
     "@fontsource/poppins": "^5.0.13",
+    "@headlessui/react": "^1.7.19",
+    "@heroicons/react": "^2.1.3",
+    "headlessui": "^0.0.0",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18"
