--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/poppins": "^5.0.13",
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
+    "@material-tailwind/react": "^2.1.9",
     "headlessui": "^0.0.0",
     "next": "14.2.1",
     "react": "^18",
