--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
+    "@types/aos": "^3.0.7",
+    "@types/react-slick": "^0.23.13",
+    "animate.css": "^4.1.1",
     "headlessui": "^0.0.0",
     "next": "14.2.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-fast-marquee": "^1.6.4",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
