--- a/package.json
+++ b/package.json
@@ -14,23 +14,26 @@
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
+    "@next/third-parties": "^14.2.2",
     "@types/aos": "^3.0.7",
     "@types/react-slick": "^0.23.13",
     "animate.css": "^4.1.1",
+    "D": "^1.0.0",
     "headlessui": "^0.0.0",
-    "next": "14.2.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.19",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.1",
+    "eslint-config-next": "^14.2.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
